<resources>
    <string name="app_name">TravelHelper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_icon_description">Your Travel Companion</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_text">Don\'t have an Account? Register</string>
    <string name="register">Registe</string>
    <string name="name_hint">Name</string>
    <string name="login_text">Already have Account? Login</string>
    <string name="view_details">View Details</string>
    <string name="place_address">Place Address</string>
    <string name="place_name">Place Name</string>
</resources>