<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/baseline_travel_explore_24"
            android:contentDescription="@string/app_icon_description" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="login"
            android:background="@color/blue"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="236dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/register_text"
            android:textColor="@color/blue" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>